# allegro-game-ui-tests

./: CMakeLists.txt  Panel.cpp  Panel.h  main.cpp  main.h
constants/: Init.cpp  Init.h  colour.cpp  colour.h  font.cpp  font.h
exceptions/: InitError.h
helpers/: Fonts.cpp  Fonts.h
initialisers/: Init.cpp  Init.h  InitAllegro.cpp  InitAllegro.h  InitConstants.cpp  InitConstants.h
settings/: Resolution.cpp  Resolution.h
structs/: Colours.h  Fonts.h
user-interface/: Panel.cpp  Panel.h  Rect.cpp  Rect.h  TextBox.cpp  TextBox.h  TextPanel.cpp  TextPanel.h
utilities/colour/: Colour.cpp  Colour.h  ColourGroup.cpp  ColourGroup.h
utilities/font/: Caslon.cpp  Caslon.h  Font.cpp  Font.h  FontFamily.cpp  FontFamily.h  FontStyle.cpp  FontStyle.h  Text.cpp  Text.h
utilities/image/: Image.cpp  Image.h  ImageCollection.h
utilities/primitives/: Rect.cpp
utilities/text/: Font.cpp  Font.h
utilities/user-interface/: Box.h  Button.h  Panel.cpp  Panel.h  TextBox.h
